# opencl-work

./: CMakeLists.txt  README.md
dlfcn/: dlfcn.cpp
include/: clelapsedtimer.h  clr2.h  cmdline.h  fdoutbuf.h  ig.h  objectfactory.h
sample/: CMakeLists.txt
sample/optimization/imgmirror/: clbuffer.cpp  climage2d.cpp  functioninvoker.h  img2dmirror.cl  imgmirror.cl  imgmirror.cpp  normal.cpp
sample/optimization/smoothing/: smooth.cl  smoothing.cpp
sample/started/dp-mul/: dp-mul.cpp  dp-mul_kernel.cl
sample/started/first/: first.cpp
